--- a/src/main/resources/ProvaVBox.fxml
+++ b/src/main/resources/ProvaVBox.fxml
@@ -120,17 +120,17 @@
         </Button>
       <VBox fx:id="vBoxShelfie" alignment="CENTER" layoutX="950.0" layoutY="31.0" prefHeight="200.0" prefWidth="100.0" spacing="42.0">
          <children>
-              <ImageView fx:id="shelfieP2" fitHeight="150.0" fitWidth="140.0" pickOnBounds="true" preserveRatio="true">
+              <ImageView fx:id="shelfieP2" fitHeight="150.0" fitWidth="140.0" focusTraversable="true" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
                   <image>
                       <Image url="@Images/bookshelf.png" />
                   </image>
               </ImageView>
-              <ImageView fx:id="shelfieP3" fitHeight="150.0" fitWidth="140.0" pickOnBounds="true" preserveRatio="true">
+              <ImageView fx:id="shelfieP3" fitHeight="150.0" fitWidth="140.0" focusTraversable="true" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
                   <image>
                       <Image url="@Images/bookshelf.png" />
                   </image>
               </ImageView>
-              <ImageView fx:id="shelfieP4" fitHeight="150.0" fitWidth="140.0" pickOnBounds="true" preserveRatio="true">
+              <ImageView fx:id="shelfieP4" fitHeight="150.0" fitWidth="140.0" focusTraversable="true" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
                   <image>
                       <Image url="@Images/bookshelf.png" />
                   </image>
@@ -139,7 +139,7 @@
       </VBox>
       <VBox fx:id="vBoxGrid" alignment="CENTER" layoutX="966.0" layoutY="39.0" prefHeight="116.0" prefWidth="107.0" spacing="69.0">
          <children>
-              <GridPane fx:id="Player2Grid" hgap="2.0" maxHeight="116.0" maxWidth="107.0" minHeight="116.0" minWidth="107.0" prefHeight="116.0" prefWidth="107.0" vgap="2.0">
+              <GridPane fx:id="Player2Grid" focusTraversable="true" hgap="2.0" maxHeight="116.0" maxWidth="107.0" minHeight="116.0" minWidth="107.0" prefHeight="116.0" prefWidth="107.0" vgap="2.0">
                   <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -156,7 +156,7 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   </rowConstraints>
               </GridPane>
-              <GridPane fx:id="Player3Grid" hgap="2.0" maxHeight="116.0" maxWidth="107.0" minHeight="116.0" minWidth="107.0" prefHeight="116.0" prefWidth="107.0" vgap="2.0">
+              <GridPane fx:id="Player3Grid" focusTraversable="true" hgap="2.0" maxHeight="116.0" maxWidth="107.0" minHeight="116.0" minWidth="107.0" prefHeight="116.0" prefWidth="107.0" vgap="2.0">
                   <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -173,7 +173,7 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   </rowConstraints>
               </GridPane>
-              <GridPane fx:id="Player4Grid" hgap="2.0" maxHeight="116.0" maxWidth="107.0" minHeight="116.0" minWidth="107.0" prefHeight="116.0" prefWidth="107.0" vgap="2.0">
+              <GridPane fx:id="Player4Grid" focusTraversable="true" hgap="2.0" maxHeight="116.0" maxWidth="107.0" minHeight="116.0" minWidth="107.0" prefHeight="116.0" prefWidth="107.0" vgap="2.0">
                   <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
