--- a/src/main/resources/EndGame.fxml
+++ b/src/main/resources/EndGame.fxml
@@ -2,56 +2,70 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="EndGame">
+<AnchorPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.it.view.GUI.EndGameController">
    <children>
       <ImageView fitHeight="720.0" fitWidth="1080.0" pickOnBounds="true">
          <image>
             <Image url="@Images/sfondo_parquet.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="137.0" fitWidth="397.0" layoutX="338.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="150.0" fitWidth="500.0" layoutX="290.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Images/Title 2000x618px.png" />
          </image>
       </ImageView>
-      <Label layoutX="460.0" layoutY="206.0" text="Game is over!">
+      <Label layoutX="441.0" layoutY="200.0" text="Game is over!">
          <font>
-            <Font name="System Bold" size="24.0" />
+            <Font name="System Bold" size="28.0" />
          </font>
       </Label>
-      <Label fx:id="firstplace" layoutX="429.0" layoutY="285.0" text="Label">
+      <Label fx:id="player1" layoutX="71.0" layoutY="397.0" text="Label">
          <font>
-            <Font size="18.0" />
+            <Font size="22.0" />
          </font>
       </Label>
-      <Label fx:id="secondplace" layoutX="430.0" layoutY="337.0" text="Label">
+      <Label fx:id="player2" layoutX="72.0" layoutY="449.0" text="Label">
          <font>
-            <Font size="18.0" />
+            <Font size="22.0" />
          </font>
       </Label>
-      <Label fx:id="thirdplace" layoutX="429.0" layoutY="384.0" text="Label">
+      <Label fx:id="player3" layoutX="71.0" layoutY="496.0" text="Label">
          <font>
-            <Font size="18.0" />
+            <Font size="22.0" />
          </font>
       </Label>
-      <Label fx:id="fourthplace" layoutX="439.0" layoutY="448.0" text="Label">
+      <Label fx:id="player4" layoutX="81.0" layoutY="560.0" text="Label">
          <font>
-            <Font size="18.0" />
+            <Font size="22.0" />
          </font>
       </Label>
-      <Label fx:id="points1" layoutX="606.0" layoutY="291.0" text="Label" />
-      <Label fx:id="points2" layoutX="604.0" layoutY="346.0" text="Label" />
-      <Label fx:id="points3" layoutX="606.0" layoutY="400.0" text="Label" />
-      <Label fx:id="points4" layoutX="600.0" layoutY="455.0" text="Label" />
-      <Button layoutX="488.0" layoutY="567.0" mnemonicParsing="false" text="Play Again">
+      <Label fx:id="points1" layoutX="248.0" layoutY="403.0" text="Label">
+         <font>
+            <Font size="16.0" />
+         </font></Label>
+      <Label fx:id="points2" layoutX="246.0" layoutY="458.0" text="Label">
+         <font>
+            <Font size="16.0" />
+         </font></Label>
+      <Label fx:id="points3" layoutX="248.0" layoutY="512.0" text="Label">
+         <font>
+            <Font size="16.0" />
+         </font></Label>
+      <Label fx:id="points4" layoutX="242.0" layoutY="567.0" text="Label">
+         <font>
+            <Font size="16.0" />
+         </font></Label>
+      <Button layoutX="475.0" layoutY="560.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="130.0" text="Play Again">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
+      <ListView fx:id="leaderBoard" layoutX="433.0" layoutY="303.0" prefHeight="200.0" prefWidth="200.0" />
    </children>
 </AnchorPane>
