adding css for background

--- a/src/main/resources/CreateGame.fxml
+++ b/src/main/resources/CreateGame.fxml
@@ -8,13 +8,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.it.view.GUI.CreateGameViewController">
+<AnchorPane id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" stylesheets="@background.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.it.view.GUI.CreateGameViewController">
     <children>
-        <ImageView fx:id="background" fitHeight="720.0" fitWidth="1080.0" pickOnBounds="true">
-            <image>
-                <Image url="@Images/sfondo_parquet.jpg" />
-            </image>
-        </ImageView>
       <ImageView fitHeight="150.0" fitWidth="500.0" layoutX="290.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Images/Title 2000x618px.png" />
